--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,9 @@ ol, ul {list-style: none; padding:0 !important;}
 @media (min-width: 992px) { ... }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) {
+	
+}
 
 
 
